Fix mobile z-indexes

--- a/src/Pages/Mobile/styles.module.scss
+++ b/src/Pages/Mobile/styles.module.scss
@@ -1,5 +1,7 @@
 .app {
-  padding-top: 56px;
+  margin-top: 56px;
   height: 100%;
-z-index: 10;
+  z-index: 10;
+  position: absolute;
+  width: 100vw;
 }
